--- a/index.html
+++ b/index.html
@@ -1,41 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="Infyra Logo.png" />
+    <link
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+  rel="stylesheet"
+/>
+
+    <link rel="icon" type="image/x-icon" href="assets/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- Primary Meta Tags -->
-    <title>Infyra Innovations – Intelligence from Soil to Sky™</title>
-    <meta name="title" content="Infyra Innovations – Intelligence from Soil to Sky™" />
-    <meta name="description" content="Infyra Innovations empowers smart farming through AI, IoT, and data analytics. Discover next-gen agri-tech solutions for sustainable growth." />
-    <meta name="keywords" content="Infyra, Smart Farming, AgriTech, IoT in Agriculture, AI Farming, Soil Analysis, Drone Farming, Precision Agriculture, Sustainable Agriculture, Infyra Innovations" />
-    <meta name="author" content="Infyra Innovations Team" />
-    <meta name="robots" content="index, follow" />
-    <meta name="language" content="English" />
-    <meta name="theme-color" content="#0c3c78" />
-
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.infyra.in" />
-    <meta property="og:title" content="Infyra Innovations – Intelligence from Soil to Sky™" />
-    <meta property="og:description" content="AI-powered agriculture solutions that transform soil, water, and crop management. Explore Infyra's innovations for smarter farming." />
-    <meta property="og:image" content="https://www.infyra.in/og-cover.jpg" />
-
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://www.infyra.in" />
-    <meta property="twitter:title" content="Infyra Innovations – Intelligence from Soil to Sky™" />
-    <meta property="twitter:description" content="Discover AI and IoT-based smart agriculture solutions with Infyra Innovations." />
-    <meta property="twitter:image" content="https://www.infyra.in/og-cover.jpg" />
-
-    <!-- Canonical URL -->
-    <link rel="canonical" href="https://www.infyra.in" />
+    <title>Infyra Innovations</title>
   </head>
-
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!-- 🚫 DO NOT ADD custom script here. React injects built files automatically -->
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
